crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__context__tests__assign_for.snap
---
source: crates/ruff_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
[
    For(
        StmtFor {
            range: 0..24,
            is_async: false,
            target: Name(
                ExprName {
                    range: 4..5,
                    id: "x",
                    ctx: Store,
                },
            ),
            iter: Tuple(
                ExprTuple {
                    range: 9..18,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 10..11,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 13..14,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 16..17,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                },
            ),
            body: [
                Pass(
                    StmtPass {
                        range: 20..24,
                    },
                ),
            ],
            orelse: [],
        },
    ),
]
