crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__context__tests__assign_named_expr.snap
---
source: crates/ruff_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
[
    If(
        StmtIf {
            range: 0..14,
            test: NamedExpr(
                ExprNamedExpr {
                    range: 3..8,
                    target: Name(
                        ExprName {
                            range: 3..4,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            range: 7..8,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            body: [
                Pass(
                    StmtPass {
                        range: 10..14,
                    },
                ),
            ],
            elif_else_clauses: [],
        },
    ),
]
